# ImageStacker

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  ImageBuffer.cpp  ImageBuffer.h  Offset.cpp  Offset.h  README.md  Stacker.cpp  Stacker.h  common.h  jpeg.cpp  jpeg.h  main.cpp  pngrw.cpp  pngrw.h
